--- a/resultado.css
+++ b/resultado.css
@@ -50,3 +50,13 @@
     padding: 0.5rem;
 }
 
+@media screen and (min-width: 1024px) {
+    .resultado {
+        padding: 0;
+        border-radius: 8%;
+        width: 27%;
+        height: auto;
+        justify-content: center;
+        position: relative;
+    }
+}
