--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,12 @@
     box-sizing: border-box;
     font-family: 'Hanken Grotesk', sans-serif;
 }
+
+@media screen and (min-width: 1024px) {
+    main {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding: 5rem;
+    }
+}
