--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,15 @@
     font-family: 'Hanken Grotesk', sans-serif;
 }
 
+@media screen and (min-width: 1440px) {
+    main {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding: 5rem;
+    }
+}
+
 @media screen and (min-width: 1024px) {
     main {
         display: flex;
